--- a/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
+++ b/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
@@ -44,12 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrivalFlight.cs" />
-    <Compile Include="Columns.cs" />
     <Compile Include="DepartureFlight.cs" />
+    <Compile Include="Flight.cs" />
+    <Compile Include="Columns.cs" />
     <Compile Include="FlightStatus.cs" />
     <Compile Include="IArrivalFlight.cs" />
     <Compile Include="IDepartureFlight.cs" />
-    <Compile Include="IFlight.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data.cs" />
