--- a/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
+++ b/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
@@ -50,6 +50,7 @@
     <Compile Include="FlightStatus.cs" />
     <Compile Include="IArrivalFlight.cs" />
     <Compile Include="IDepartureFlight.cs" />
+    <Compile Include="Passenger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data.cs" />
