--- a/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
+++ b/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
@@ -43,15 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArrivalFlight.cs" />
-    <Compile Include="DepartureFlight.cs" />
-    <Compile Include="Flight.cs" />
+    <Compile Include="Flights\ArrivalFlight.cs" />
+    <Compile Include="Flights\DepartureFlight.cs" />
+    <Compile Include="Flights\Flight.cs" />
     <Compile Include="Columns.cs" />
-    <Compile Include="FlightStatus.cs" />
-    <Compile Include="IArrivalFlight.cs" />
-    <Compile Include="IDepartureFlight.cs" />
-    <Compile Include="Passenger.cs" />
-    <Compile Include="PassengerCreator.cs" />
+    <Compile Include="Flights\FlightStatus.cs" />
+    <Compile Include="Flights\IArrivalFlight.cs" />
+    <Compile Include="Flights\IDepartureFlight.cs" />
+    <Compile Include="Passengers\FindTypes.cs" />
+    <Compile Include="Passengers\Passenger.cs" />
+    <Compile Include="Passengers\PassengerCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data.cs" />
