--- a/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
+++ b/MA/Basics/Module 2/Lesson_4/AirlineInfo/AirlineInfo/AirlineInfo.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Flights\DepartureFlight.cs" />
     <Compile Include="Flights\Flight.cs" />
     <Compile Include="Columns.cs" />
+    <Compile Include="Flights\FlightCreator.cs" />
     <Compile Include="Flights\FlightStatus.cs" />
     <Compile Include="Flights\IArrivalFlight.cs" />
     <Compile Include="Flights\IDepartureFlight.cs" />
@@ -57,6 +58,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="Table.cs" />
+    <Compile Include="Tickets\Ticket.cs" />
+    <Compile Include="Tickets\TicketCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
