--- a/MA/Basics/Module 5/Lesson_3/ClassWork/ClassWork_1/App.config
+++ b/MA/Basics/Module 5/Lesson_3/ClassWork/ClassWork_1/App.config
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="ClassWork_1.Properties.Settings.DataSetDbConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataSetDb.mdf;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
+        <add name="ClassWork_1.Properties.Settings.tect_common_dbConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\tect_common_db.mdf;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
