--- a/MA/Basics/Module 5/Lesson_4/ado_net_174/Hello_DataSets/Hello_DataSets/App.config
+++ b/MA/Basics/Module 5/Lesson_4/ado_net_174/Hello_DataSets/Hello_DataSets/App.config
@@ -2,6 +2,11 @@
 <configuration>
     <configSections>
     </configSections>
+    <connectionStrings>
+        <add name="Hello_DataSets.Properties.Settings.tect_common_dbConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataDirectory\tect_common_db.mdf;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
